# retrieval-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
app/: auth.py  config.py  main.py  models.py
app/routes/: search.py
app/services/: agent.py  bm25.py  embedding.py  pipeline.py  qdrant.py  query_generation.py  reranker.py  sparse_embedding.py
tests/: conftest.py  test_auth.py  test_health.py  test_search_endpoint.py
tests/services/: test_agent.py  test_bm25.py  test_embedding.py  test_multitenancy.py  test_pipeline.py  test_qdrant.py  test_qdrant_hybrid.py  test_query_generation.py  test_reranker.py  test_sparse_embedding.py
